# image-transformer

./: .pylintrc  Makefile  README.md  configurations.toml  example-1.html  example-2.html  genindex.html  image_processors.html  image_transformer.commands.html  image_transformer.html  image_transformer.image_processors.html  image_transformer.output_builders.html  image_transformer.pixels_processors.html  image_transformer.utils.html  index.html  installation.html  main.html  modules.html  objects.inv  output_builders.html  pixels_processors.html  py-modindex.html  pyproject.toml  quickstart-cli.html  quickstart-program.html  search.html  searchindex.js  tox.ini  utils.html
.github/: CODEOWNERS
.github/workflows/: coverage.yml  documentation.yml  linting.yml  publish.yml  testing.yml
_modules/: index.html
_modules/image_processors/: generic_grid_image_processor.html  hexagonal_grid_image_processor.html  square_grid_image_processor.html
_modules/image_transformer/: commands.html  image_transformer.html  index.html
_modules/main/: image_transformer.html  index.html
_modules/output_builders/: cairo_svg_output_builder.html  generic_output_builder.html  handmade_svg_output_builder.html
_modules/pixels_processors/: average_pixels_processor.html  generic_pixels_processor.html  most_frequent_pixels_processor.html  random_pixels_processor.html
_modules/utils/: arguments_parser.html  arguments_validator.html  configurations_loader.html  loader.html
_sources/: example-2.rst.txt  image_processors.rst.txt  image_transformer.commands.rst.txt  image_transformer.image_processors.rst.txt  image_transformer.output_builders.rst.txt  image_transformer.rst.txt  image_transformer.utils.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  pixels_processors.rst.txt  quickstart-program.rst.txt  utils.rst.txt
docs/: conf.py  example-1.rst  image_transformer.pixels_processors.rst  index.rst  main.rst  output_builders.rst  quickstart-cli.rst
image_transformer/: __init__.py  configurations.toml  constants.py  image_transformer.py  index.py
image_transformer/commands/: __init__.py  helpers.py  image_generator.py  image_transformer.py
image_transformer/distributions/: __init__.py  generic_distribution.py  normal_distribution.py  poisson_distribution.py
image_transformer/image_processors/: hexagonal_grid_image_processor.py  square_grid_image_processor.py
image_transformer/output_builders/: cairo_svg_output_builder.py  generic_output_builder.py  handmade_svg_output_builder.py
image_transformer/pixels_processors/: __init__.py  average_pixels_processor.py  color_palette_based_pixel_processor.py  distribution_based_pixel_processor.py  most_frequent_pixels_processor.py
image_transformer/utils/: __init__.py  arguments_parser.py  arguments_validator.py  click_color.py  hex_to_rgb_color_converter.py
src/image_loader/: loader.py
src/image_processors/: generic_grid_image_processor.py  hex_grid_image_processor.py  hexagonal_grid_image_processor.py  square_grid_image_processor.py
src/image_transformer/: __init__.py  constants.py  image_transformer.py  index.py
src/main/: constants.py  image_transformer.py  index.py
src/output_builders/: cairo_svg_output_builder.py  generic_output_builder.py  handmade_svg_output_builder.py
src/pixels_processors/: average_pixels_processor.py  frequent_pixels_processor.py  generic_pixels_processor.py  most_frequent_pixels_processor.py  random_pixels_processor.py
src/utils/: arguments_parser.py  (+2 more)
(+31 files in other folders)
