[tool.poetry]
name = "image-transformer"
version = "0.2"
description = "A Python project for enhancing images using various processing techniques."
authors = ["raiden <nadirkichou@hotmail.fr>"]
readme = "README.md"
packages = [
    {include = "image_transformer", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
numpy = "^2.1.1"
pycairo = "^1.27.0"
alive-progress = "^3.1.5"

[tool.poetry.scripts]
image-transformer = "image_transformer.index:main"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
pytest = "^8.3.3"
tox = "^4.23.0"
pylint = "^3.3.1"
coverage = "^7.6.3"
coverage-badge = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
