[tool.poetry]
name = "image-transformer"
version = "0.2.7"
description = "A Python project for enhancing images using various processing techniques."
authors = ["raiden <nadirkichou@hotmail.fr>"]
maintainers = [
    "raiden <nadirkichou@hotmail.fr>",
]
homepage = "https://raideno.github.io/m1-ds-rcs-part-5/"
documentation = "https://raideno.github.io/m1-ds-rcs-part-5/"
repository = "https://github.com/raideno/m1-ds-rcs-part-5"
keywords = ["image-processing", "image-enhancement", "image-transformer"]
readme = "README.md"
packages = [
    {include = "image_transformer", from = "src"}
]
include = [
    { path = "src/image_transformer/configurations.toml", format = "sdist" },
    { path = "src/image_transformer/configurations.toml", format = "wheel" },
    { path = "README.md", format = "sdist" },
    { path = "README.md", format = "wheel" },
]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
numpy = "^2.1.1"
pycairo = "^1.27.0"
alive-progress = "^3.1.5"

[tool.poetry.scripts]
image-transformer = "image_transformer.index:main"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
pytest = "^8.3.3"
tox = "^4.23.0"
pylint = "^3.3.1"
coverage = "^7.6.3"
coverage-badge = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
