[tool.poetry]
name = "image-transformer"
version = "0.5.0"
description = "A Python project for enhancing images using various processing techniques."
authors = ["raiden <nadirkichou@hotmail.fr>"]
maintainers = [
    "raiden <nadirkichou@hotmail.fr>",
]
homepage = "https://raideno.github.io/image-transformer/"
documentation = "https://raideno.github.io/image-transformer/"
repository = "https://github.com/raideno/image-transformer"
keywords = ["image-processing", "image-enhancement", "image-transformer"]
readme = "README.md"
packages = [
    {include = "image_transformer", from = "."}
]
include = [
    { path = "image_transformer/configurations.toml", format = "sdist" },
    { path = "image_transformer/configurations.toml", format = "wheel" },
    { path = "README.md", format = "sdist" },
    { path = "README.md", format = "wheel" },
]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
numpy = "^2.1.1"
pycairo = "^1.27.0"
alive-progress = "^3.1.5"
click = "^8.1.7"

[tool.poetry.scripts]
image-transformer = "image_transformer.index:main"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
pytest = "^8.3.3"
tox = "^4.23.0"
pylint = "^3.3.1"
coverage = "^7.6.3"
coverage-badge = "^1.1.2"
sphinx-rtd-theme = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
